--- a/arch/arm/configs/aoscp_shamu_defconfig
+++ b/arch/arm/configs/aoscp_shamu_defconfig
@@ -3710,7 +3710,7 @@ CONFIG_CRYPTO_SHA1=y
 # CONFIG_CRYPTO_SHA1_ARM_NEON is not set
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA256_ARM=y
-# CONFIG_CRYPTO_SHA512 is not set
+CONFIG_CRYPTO_SHA512=y
 # CONFIG_CRYPTO_SHA512_ARM_NEON is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
