--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -386,7 +386,6 @@ CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
 # CONFIG_MSM_TEST_QMI_CLIENT is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-CONFIG_MSM_DEVFREQ_CPUBW=y
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 # CONFIG_MSM_AVS_HW is not set
 CONFIG_RTAC=y
@@ -3361,8 +3360,9 @@ CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
+CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
-CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
+# CONFIG_MSM_BIMC_BWMON is not set
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
@@ -3370,6 +3370,8 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 #
 # DEVFREQ Drivers
 #
+CONFIG_DEVFREQ_SIMPLE_DEV=y
+CONFIG_MSM_DEVFREQ_DEVBW=y
 # CONFIG_EXTCON is not set
 # CONFIG_MEMORY is not set
 # CONFIG_IIO is not set
